1.网络加载请求框架完成 2.TabLayout+ViewPager+自定义Behavior+仿知乎底部动态滑动显示隐藏效果

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 
     implementation project(':mvp')
     implementation project(':http')
+    implementation project(':annotation')
+    implementation project(':task')
 
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
 
