--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
 
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
 
+    implementation 'com.airbnb.android:lottie:2.8.0'
+
 }
