--- a/apt/build.gradle
+++ b/apt/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.squareup:javapoet:1.9.0'
+    implementation 'com.google.auto.service:auto-service:1.0-rc3'
+    implementation project(':annotation')
 }
 
 sourceCompatibility = "7"
